--- a/contact.html
+++ b/contact.html
@@ -180,7 +180,7 @@ loading="lazy">
 </div>
 </div>
 <div class="footer-bottom">
-<p>Designed and Developed by <a href="https://www.linkedin.com/in/roshni-stephen" target="_blank" rel="noopener noreferrer" class="footer-credit">Roshni Stephen</a></p>
+<p>Designed and Developed by <a href="https://www.linkedin.com/in/roshni-a-s-545a6215a/" target="_blank" rel="noopener noreferrer" class="footer-credit">Roshni Stephen</a></p>
 </div>
 </div>
 </footer>
